<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context="com.ls.celtica.lsdelivryls.Clients.AddClient">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/AppColor">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="21sp"
            android:text="@string/add_clt_titre"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:text="@string/add_clt_nomLabel"/>
        <EditText
            android:id="@+id/addClt_nom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_butt2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/add_clt_nomInp"
            android:textColorHint="@color/Gray"
            android:textAlignment="center"
            android:textColor="@color/Black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:text="@string/add_clt_telLabel"/>
        <EditText
            android:id="@+id/addClt_tel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_butt2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="number"
            android:hint="@string/add_clt_telInp"
            android:textColorHint="@color/Gray"
            android:textAlignment="center"
            android:textColor="@color/Black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:text="@string/add_clt_adrLabel"/>
        <EditText
            android:id="@+id/addClt_adr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_butt2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/add_clt_adrInp"
            android:textColorHint="@color/Gray"
            android:textAlignment="center"
            android:textColor="@color/Black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:text="@string/add_clt_typeLabel"/>
        <Spinner
            android:id="@+id/addClt_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_butt2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:popupBackground="@color/AppColor"
            android:textColorHint="@color/Black"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/addClt_valider"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_butt"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="17sp"
            android:text="@string/add_clt_valider"/>
    </LinearLayout>
</LinearLayout>
