<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:padding="5dp">

    <TextView
        android:id="@+id/panier_qt_nom_pr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:fontFamily="@font/cairo"
        android:textAlignment="center"
        android:textSize="17sp"
        android:text="Kaspersky anti virus"/>

    <TextView
        android:id="@+id/panier_qt_qt_pr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:fontFamily="@font/cairo"
        android:textAlignment="center"
        android:textSize="15sp"
        android:text="Quantité: 198652"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faireVente_scanner_qt"/>
        <EditText
            android:id="@+id/panier_qt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:fontFamily="@font/cairo"
            android:textSize="17dp"
            android:hint="@string/add_pr_panier_qt"
            android:textAlignment="center"
            android:textColor="@color/AppColor"
            android:textColorHint="@color/AppColor"/>
    </LinearLayout>


    <TextView
        android:id="@+id/valider_pr_panier"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/cairo"
        android:background="@drawable/bg_butt"
        android:gravity="center"
        android:text="@string/param_AddPr_valider"
        android:textColor="@color/White"/>


</LinearLayout>