<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context="com.ls.celtica.lsdelivryls.Ventes.AfficherProduitVendu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/AppColor">

            <TextView
                android:id="@+id/prv_titre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cairo"
                android:gravity="center"
                android:text="Bon Num: 5025"

                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="18sp" />

        </LinearLayout>
        <TextView
            android:id="@+id/aff_vente_pTot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cairo"
            android:textAlignment="center"
            android:textColor="@color/Green"
            android:textSize="17sp"
            android:text="prix_total: 1000000000000 DA"/>

        <TextView
            android:id="@+id/aff_vente_pTotSansRemise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:fontFamily="@font/cairo"
            android:textAlignment="center"
            android:textColor="@color/Red"
            android:textSize="17sp"
            android:text="prix_total: 5256660 DA"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:background="@color/White">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/panier_pr_titre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:fontFamily="@font/cairo"
                    android:textSize="18sp"
                    android:textColor="@color/AppColor"
                    android:text="@string/faireVente_pr"/>
                <Button
                    android:id="@+id/panier_change_prToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2.3"
                    android:text="+"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_weight="1.2"
                android:fontFamily="@font/cairo"
                android:textSize="18sp"
                android:textColor="@color/AppColor"
                android:text="@string/faireVente_qte"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:fontFamily="@font/cairo"
                android:textSize="18sp"
                android:textColor="@color/AppColor"
                android:text="@string/faireVente_prix"/>



        </LinearLayout>

        <!-- Affichage des clients .. -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/Div_AffichPrv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"></android.support.v7.widget.RecyclerView>
    </LinearLayout>
</FrameLayout>
