<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/bg2"
    tools:context="com.ls.celtica.lsdelivryls.Clients.AfficherClients">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- div de Bar Title  -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/AppColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:fontFamily="@font/cairo"
                android:gravity="center"
                android:text="@string/aff_vente_titre"

                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="21sp" />
            <LinearLayout
                android:id="@+id/bon_search_butt"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/AppColor"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="left">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/search_ic"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bon_faireVente_butt"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:background="@color/AppColor"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="right">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/add_pr"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bon_voirArchive_butt"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:visibility="gone"
                android:background="@color/AppColor"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="right">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/menu_point"/>
            </LinearLayout>

            <!-- div de recherche d un bon -->
            <FrameLayout
                android:id="@+id/vente_div_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="-50dp"
                android:orientation="horizontal"
                android:background="@color/AppColor">
                <ImageView
                    android:id="@+id/vente_div_search_back"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/back"/>
                <EditText
                    android:id="@+id/facture_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@color/AppColor"
                    android:fontFamily="@font/cairo"
                    android:gravity="center"
                    android:textColorHint="@color/White"
                    android:hint="@string/aff_bon_chercher"
                    android:textColor="@color/White"
                    android:textSize="17sp" />
                <ImageView
                    android:id="@+id/vente_div_search_calendar"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_gravity="right"
                    android:src="@drawable/calendar"/>

            </FrameLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/affVentes_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/Green"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="total: 256 002 036 000 000 000 .00 DA"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@color/AppColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/White"
                android:fontFamily="@font/cairo"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/AppColor"
                android:textSize="19sp"
                android:text="@string/aff_vente_bon"/>


        </LinearLayout>

        <!-- Affichage des clients .. -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/Div_AffichVente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"></android.support.v7.widget.RecyclerView>

    </LinearLayout>



</FrameLayout>
